--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Bekir Ün</title>
 </head>
 
-<body class="min-h-screen bg-gradient-to-br from-slate-100 to-slate-300">
+<body class="min-h-screen bg-white dark:bg-slate-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
