--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/profile-photo.png" />
+  <link rel="shortcut icon" href="/profile-photo.png" type="image/png">
+  <link rel="apple-touch-icon" href="/profile-photo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bekir Ün</title>
+
+  <!-- SEO Meta Tags -->
+  <title>Bekir Ün - Kişisel Web Sitesi</title>
+  <meta name="description"
+    content="Bekir Ün, kişisel portfolyo web sitesi. Projelerimi, yeteneklerimi ve hakkımdaki diğer bilgileri burada bulabilirsiniz." />
+  <meta name="keywords"
+    content="Bekir Ün, kişisel web sitesi, portfolyo, yazılım geliştirici, frontend, backend, fullstack, react, nodejs, typescript" />
+  <meta name="author" content="Bekir Ün" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.bekirun.me/" />
+  <meta property="og:title" content="Bekir Ün - Kişisel Web Sitesi" />
+  <meta property="og:description" content="Bekir Ün, kişisel portfolyo web sitesi." />
+  <meta property="og:image" content="https://www.bekirun.me/profile-photo.png" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Bekir Ün",
+      "url": "https://www.bekirun.me/",
+      "sameAs": [
+        "https://github.com/ichbinbekir",
+        "https://www.linkedin.com/in/bekirun"
+      ]
+    }
+  </script>
 </head>
 
 <body>
